Changelog for zest.releaser
===========================

1.14 (unreleased)
-----------------

- Merged kteague-multi-vcs branch with, woohoo, mercurial support!  [reinout]

- Mercurial support by Kevin Teague.  [kteague]

- ``postrelease`` put a space in the new version number in
  ``setup.py`` (between version number and ``dev``). Removed this
  space as it is not necessary (in best case). [icemac]


1.13 (2009-03-17)
-----------------

- Also looking for ``CHANGES`` in addition to ``HISTORY.txt`` and
  ``CHANGES.txt`` as some packages use that convention.  [reinout]

- Added ``lasttagdiff`` command that shows the diff between the last release
  and the currently committed trunk.  Handy for checking whether the changelog
  is up to date.  [reinout]


1.12 (2009-03-17)
-----------------

- When doing a fullrelease and if the release step made a checkout of the tag
  into an temp directory, that temp directory is again printed after
  fullrelease finishes. Otherwise you've got to do a lot of scrolling.
  [reinout]


1.11 (2009-03-04)
-----------------

- When the found history file contains no version headings, look for a
  second history file: more than once I have the standard
  docs/HISTORY.txt that paster creates and I just add a pointer there
  to the real package/name/HISTORY.txt.  [maurits]


1.10 (2009-02-25)
-----------------

- A ``    version = '1.0',`` in setup.py is now also rewritten
  correctly.  Previously just a ``version = '1.0'`` would be injected,
  so without indentation and comma.  [reinout]

- Ask before checking out the tag. Sometimes the checkout is huge and
  you know you don't want it. You don't get asked for a pypi upload,
  though if you don't check out the tag.  [reinout]


1.9 (2009-02-24)
----------------

- 'release' now also makes a tag checkout in a temporary directory.
  [Reinout]

- Made 'longtest' work on Linux as there the command is 'rst2html' and
  apparently on the Mac it is 'rst2html.py'.  [maurits]


1.8 (2009-02-23)